# FalconSignals

./: .gitignore  .pre-commit-config.yaml  .vulture_whitelist.txt  404.html  CLAUDE.md  FULL_MARKET_ANALYSIS_SETUP.md  MARKET_TICKERS.py  QUICK_START_FULL_MARKET.md  README.md  REFACTORING_PLAN.md  debug_output.txt  index.html  pyproject.toml  pyrightconfig.json  sitemap.xml
.github/workflows/: coverage.yml  pr-tests.yml
about/: index.html
config/: default.yaml
cron_jobs/: collect_fundamentals.sh  crontab_schedule.txt  download_prices.sh  publish_report.sh  run_analysis.sh
data/: .gitignore  runs.jsonl
docs/: ARCHITECTURE_ANALYSIS.md  BACKTESTING_PROPOSAL.md  BRANCH_PROTECTION_CHECKLIST.md  CLI_GUIDE.md  LLM_CONFIGURATION.md  STRUCTURED_OUTPUT_EXAMPLE.py  analyze_workflow.mermaid  architecture.mermaid  ci_cd_setup.md  ci_cd_workflow.mermaid  earnings_estimates_audit.md  fundamental_metrics_cheatsheet.md  historical_analysis.md  llm_cli_guide.md  roadmap.md
notebooks/: .gitignore  01_data_fetching_and_caching.py  02_historical_analysis_exploration.py  03_current_analysis_exploration.py  04_llm_vs_rule_based_comparison.py  05_performance_tracking_exploration.py  06_signal_creation_deep_dive.py  README.md  test_jupytext_setup.py
reports/: index.html
scripts/: backfill_ticker_metadata.py  test_normalizer_parsing.py  verify_agent_execution.py
search/: search_index.json
src/: MARKET_TICKERS.py  __init__.py  main.py  pipeline.py
tags/: index.html
tests/: conftest.py  integration_test.py  test_main.py
tickers/: index.html
website/: mkdocs.yml
(+433 files in other folders)
