[project]
name = "nordinvest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.6.0",
    "crewai-tools>=1.6.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "notebook>=7.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
